[package]
name = "httpbounder"
version = "0.1.0"
authors = ["Szperak"]
edition = "2018"


[dependencies]
actix-web = "3"
awc = "2"
anyhow = "*"
derive_more = "*"
base64 = "*"
futures = "*"
actix-rt = "*"
tokio = { version = "*", features = ["sync", "fs"]}
reqwest = "*"
twoway = "*"
clap = "*"
serde = "*"
serde_derive = "*"
toml = "0.5"

# [target.'cfg(unix)'.dependencies]
# pprof = { version = "0.3", features = ["flamegraph"] } 