[package]
name = "httpbounder"
version = "0.1.0"
authors = ["Szperak"]
edition = "2018"


[dependencies]
actix-web = "3.1"
anyhow = "1.0"
derive_more = "0.99"
base64 = "0.13"
futures = "0.3"
actix-rt = "1.1"
tokio = { version = "0.2", features = ["sync", "fs", "time", "io-util"]}
reqwest = "0.10"
twoway = "0.2"
clap = "2.33"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"

# [target.'cfg(unix)'.dependencies]
# pprof = { version = "0.3", features = ["flamegraph"] } 